--- a/assets/style/abstracts/variables/_colors.scss
+++ b/assets/style/abstracts/variables/_colors.scss
@@ -18,3 +18,8 @@ $color__border-button-hover: #ccc #bbb #aaa;
 $color__border-button-focus: #aaa #bbb #bbb;
 $color__border-input: #ccc;
 $color__border-abbr: #666;
+
+/* Custom */
+$shinka__black: #000000;
+$shinka__header: #212121;
+$shinka__white: #ffffff;
