--- a/assets/style/components/navigation/_navigation.scss
+++ b/assets/style/components/navigation/_navigation.scss
@@ -1,109 +1,124 @@
-.main-navigation {
-	display: block;
-	width: 100%;
+.shinka-header {
+	background: $shinka__header;
+    height: 60px;
+}
 
-	ul {
-		display: none;
-		list-style: none;
-		margin: 0;
-		padding-left: 0;
+.shinka-header__navigation {
+	display: none;
+	position: absolute;
+    top: 60px;
+    width: 100%;
+    background: #323232;
+}
 
-		ul {
-			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-			float: left;
-			position: absolute;
-			top: 100%;
-			left: -999em;
-			z-index: 99999;
+.shinka-header__navigation-container {
+	padding: 10px;
+}
 
-			ul {
-				left: -999em;
-				top: 0;
-			}
-
-			li {
-
-				&:hover > ul,
-				&.focus > ul {
-					display: block;
-					left: auto;
-				}
-			}
-
-			a {
-				width: 200px;
-			}
-
-			:hover > a,
-			.focus > a {
-			}
-
-			a:hover,
-			a.focus {
-			}
-		}
-
-		li:hover > ul,
-		li.focus > ul {
-			left: auto;
-		}
-	}
-
+.shinka-header__menu {
+	padding: 0;
+    margin: 0;
+    list-style-type: none;
 	li {
-		position: relative;
-
-		&:hover > a,
-		&.focus > a {
+		&:first-of-type {
+			margin-top: 0;
+		}
+		margin-top: 10px;
+		a {
+			color: $shinka__white;
+			text-transform: uppercase;
+			text-decoration: none;
+			font-weight: 600;
+			&:visited {
+				color: $shinka__white;
+			}
 		}
 	}
+}
 
-	a {
+.shinka-header__container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: relative;
+	height: 100%;
+	svg {
+		width: 20px;
+		height: 20px;
 		display: block;
-		text-decoration: none;
-	}
-
-	.current_page_item > a,
-	.current-menu-item > a,
-	.current_page_ancestor > a,
-	.current-menu-ancestor > a {
+		fill: $shinka__white;
 	}
 }
 
-/* Small menu. */
-.menu-toggle,
-.main-navigation.toggled ul {
-	display: block;
+.shinka-header__logo, .shinka-header__sns-icon {
+	margin-left: 10px;
+	svg {
+		width: 100%;
+	}
 }
 
-@media screen and (min-width: 37.5em) {
+.shinka-header__sns {
+	display: none;
+}
 
-	.menu-toggle {
+.shinka-header__dark-icon {
+	margin-left: auto;
+}
+
+.shinka-header__menu-icon {
+	margin-right: 10px;
+}
+
+.shinka-header__search-icon, .shinka-header__menu-icon {
+	margin-left: 10px;
+}
+
+@media (min-width: 1200px) {
+	.shinka-header__container {
+		width: 1280px;
+		max-width: 1280px;
+		margin: auto;
+	}
+	.shinka-header__logo {
+		margin: 0;
+	}
+	.shinka-header__menu-icon {
 		display: none;
 	}
-
-	.main-navigation ul {
+	.shinka-header__sns {
 		display: flex;
+		margin-left: auto;
 	}
-}
-
-.comment-navigation,
-.posts-navigation,
-.post-navigation {
-
-	.site-main & {
-		margin: 0 0 1.5em;
+	.shinka-header__sns-icon {
+		margin-left: 15px;
 	}
-
-	.nav-links {
+	.shinka-header__dark-icon {
+		border-left: 1px solid #424242;
+		padding-left: 10px;
+		margin-left: 10px;
+	}
+	.shinka-header__dark-icon, .shinka-header__search-icon {
+		cursor: pointer;
+	}
+	.shinka-header__navigation {
+		margin-left: 30px;
+		display: block;
+		position: relative;
+		top: 0;
+		width: auto;
+		background: $shinka__header;
+	}
+	.shinka-header__navigation-container {
+		padding: 0;
+	}
+	.shinka-header__menu {
 		display: flex;
-	}
-
-	.nav-previous {
-		flex: 1 0 50%;
-	}
-
-	.nav-next {
-		text-align: end;
-		flex: 1 0 50%;
+		li {
+			&:first-of-type {
+				margin-left: 0;
+			}
+			margin-top: 0;
+			margin-left: 15px;
+		}
 	}
 }
