--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,6 +1,6 @@
 /*!
 Theme Name: GamingTalker Shinka
-Theme URI: https://github.com/AlexzanDev/Ruri
+Theme URI: https://www.gamingtalker.it
 Author: Alessandro Zangrandi & Automattic
 Author URI: https://alexzandev.github.io
 Description: Shinka is a WordPress starter theme based on <code>_s</code>, or <em>underscores</em>, by Automattic.
@@ -15,7 +15,7 @@ Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-com
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
 
-Ruri is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
+Shinka is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
