Front page styling

--- a/assets/style/abstracts/variables/_colors.scss
+++ b/assets/style/abstracts/variables/_colors.scss
@@ -23,3 +23,5 @@ $color__border-abbr: #666;
 $shinka__black: #000000;
 $shinka__header: #212121;
 $shinka__white: #ffffff;
+$shinka__red: #ff1414;
+$shinka__border: #d8d8d8;
