--- a/assets/style/components/navigation/_navigation.scss
+++ b/assets/style/components/navigation/_navigation.scss
@@ -83,10 +83,64 @@
 	display: flex;
     flex-direction: column;
 	padding: 15px;
+	align-items: center;
 }
 
-.shinka-footer__main {
+
+.shinka-footer__sns {
 	display: flex;
+    margin-top: 15px;
+    justify-content: space-between;
+}
+
+.shinka-footer__links {
+	margin-top: 15px;
+    color: $shinka__white;
+}
+
+.shinka-footer__text {
+	text-align: center;
+    margin-top: 15px;
+    color: $shinka__white;
+}
+
+.shinka-footer__text-content {
+	margin-top: 10px;
+	font-size: 16px;
+	&:first-of-type {
+		margin: 0;
+	}
+}
+
+.shinka-footer__sns, .shinka-footer__logo {
+	svg {
+		width: 20px;
+		height: 20px;
+		display: block;
+		fill: $shinka__white;
+	}
+}
+
+.shinka-footer__logo {
+	svg {
+		width: 100%;
+	}
+}
+
+.shinka-footer__menu {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+	a {
+		display: block;
+		color: $shinka__white;
+		padding: 10px;
+		font-weight: 600;
+		text-align: center;
+	}
 }
 
 @media (min-width: 1200px) {
@@ -95,7 +149,7 @@
 		max-width: 1280px;
 		margin: auto;
 	}
-	.shinka-header__logo {
+	.shinka-header__logo, .shinka-footer__logo {
 		margin: 0;
 		svg {
 			height: 25px;
@@ -139,6 +193,27 @@
 			}
 			margin-top: 0;
 			margin-left: 15px;
+		}
+	}
+	.shinka-footer__main {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.shinka-footer__sns {
+		margin-top: 0;
+	}
+	.shinka-footer__container {
+		width: 1280px;
+		max-width: 1280px;
+		margin: auto;
+		padding: 15px 0;
+		align-items: unset;
+	}
+	.shinka-footer__menu {
+		a {
+			margin: 0 10px;
+			padding: 0;
 		}
 	}
 }
