--- a/assets/style/base/typography/_headings.scss
+++ b/assets/style/base/typography/_headings.scss
@@ -1,3 +1,27 @@
 h1, h2, h3, h4, h5, h6, p {
 	margin: 0;
 }
+
+h1 {
+	font-size: 30px;
+}
+
+h2 {
+	font-size: 28px;
+}
+
+h3 {
+	font-size: 26px;
+}
+
+h4 {
+	font-size: 24px;
+}
+
+h5 {
+	font-size: 22px;
+}
+
+h6 {
+	font-size: 20px;
+}
