--- a/assets/style/components/content/_posts-and-pages.scss
+++ b/assets/style/components/content/_posts-and-pages.scss
@@ -280,7 +280,8 @@
 	background: $shinka__red;
 	text-transform: uppercase;
 	font-size: 15px;
-	padding: 10px;
+	font-weight: 600;
+	padding: 7px;
 }
 
 .shinka-post__heading {
@@ -416,6 +417,128 @@
 	}
 }
 
+.shinka__related-content {
+	margin-top: 10px;
+}
+
+.shinka__related-content-title {
+	margin-top: 5px;
+	font-size: 20px;
+	&:first-of-type {
+		margin: 0;
+	}
+}
+
+.shinka__post-game {
+	background: $shinka__grey;
+	padding: 20px;
+	margin-top: 10px;
+}
+
+.shinka__post-game-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr;
+    grid-gap: 10px;
+}
+
+.shinka__post-game-cover-img {
+	display: block;
+	width: 100%;
+}
+
+.shinka__post-game-summary {
+	font-size: 16px;
+}
+
+.shinka__post-game-text-bold {
+	font-weight: 600;
+}
+
+.shinka__post-game-text {
+	margin-top: 10px;
+	font-size: 17px;
+	&:first-of-type {
+		margin: 0;
+	}
+}
+
+.shinka__post-game-details {
+	grid-area: 2 / 1 / 3 / 3;
+}
+
+.shinka__in-post-title {
+	margin-top: 10px;
+}
+
+.shinka__recommended-content {
+	margin-top: 10px;
+	padding: 0 15px;
+}
+
+.shinka__recommended-content-post, .shinka-sidebar__popular-post-wrapper, .shinka-sidebar__popular-post {
+	margin-top: 10px;
+}
+
+.shinka__recommended-content-image, .shinka-sidebar__popular-post-image {
+	a, img {
+		display: block;
+	}
+}
+
+.shinka__recommended-content-text, .shinka-sidebar__popular-post-text {
+	margin-top: 5px;
+}
+
+.shinka__recommended-content-title, .shinka-sidebar__popular-post-title {
+	font-size: 22px;
+}
+
+.shinka-sidebar, .shinka__recommended-content {
+	a {
+		color: $shinka__black;
+		&:hover {
+			color: $shinka__red;
+			opacity: .9;
+			transition-duration: .2s;
+		}
+	}
+}
+
+.shinka-sidebar__new-post-wrapper {
+	display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+	margin-top: 5px;
+}
+
+.shinka-sidebar__new-post {
+	flex: 0 0 50%;
+    width: 50%;
+}
+
+.shinka-sidebar__new-post:nth-child(odd) {
+	padding-right: 10px;
+}
+.shinka-sidebar__new-post:nth-child(even) {
+	padding-left: 10px;
+}
+
+.shinka-sidebar__new-post:nth-child(3), .shinka-sidebar__new-post:nth-child(4) {
+	margin-top: 10px;
+}
+
+.shinka-sidebar__new-post-thumb {
+	display: block;
+	width: 100%;
+}
+
+.shinka-sidebar__new-post-title {
+	font-size: 18px;
+	display: block;
+	margin-top: 8px;
+}
+
 @media (min-width: 1200px) {
 	.shinka-wrapper {
 		margin: auto;
@@ -546,5 +669,28 @@
 
 	.shinka-archive__load-more-link {
 		font-size: 21px;
+	}
+
+	.shinka-post__thumbnail-wrapper {
+		margin-top: 0;
+	}
+
+	.shinka-post__content-wrapper {
+		margin-top: 15px;
+		display: flex;
+	}
+
+	.shinka-post__content-container {
+		padding-right: 15px;
+	}
+
+	.shinka-sidebar {
+		flex: 1 0 30%;
+		padding-left: 15px;
+		border-left: 1px solid $shinka__border;
+	}
+	
+	.shinka__in-post-title:first-of-type {
+		margin-top: 0;
 	}
 }
