--- a/assets/style/components/content/_posts-and-pages.scss
+++ b/assets/style/components/content/_posts-and-pages.scss
@@ -290,11 +290,14 @@
 
 .shinka-post__title {
 	font-size: 30px;
+	line-height: 1.3em;
 }
 
 .shinka-post__excerpt {
-	font-size: 17px;
+	font-size: 20px;
 	margin-top: 8px;
+	line-height: 1.3em;
+	color: $shinka__grey-text;
 }
 
 .shinka-post__meta {
@@ -473,7 +476,6 @@
 
 .shinka__recommended-content {
 	margin-top: 10px;
-	padding: 0 15px;
 }
 
 .shinka__recommended-content-post, .shinka-sidebar__popular-post-wrapper, .shinka-sidebar__popular-post {
@@ -575,7 +577,7 @@
 		margin-top: 20px;
 	}
 	
-	.shinka-home__hot-news {
+	.shinka-home__hot-news, .shinka__recommended-content-post {
 		flex: 0 1 25%;
 		margin-right: 20px;
 		&:last-child {
@@ -589,7 +591,7 @@
 		}
 	}
 	
-	.shinka-home__hot-news-title {
+	.shinka-home__hot-news-title, .shinka__recommended-content-title {
 		font-size: 20px;
 		line-height: 1.5em;
 		margin-top: 8px;
@@ -687,10 +689,70 @@
 	.shinka-sidebar {
 		flex: 1 0 30%;
 		padding-left: 15px;
-		border-left: 1px solid $shinka__border;
+		border-left: 1px solid $shinka__border;	
+		.shinka__in-post-title:first-of-type {
+			margin-top: 0;
+		}
+	}
+
+	.shinka-post__title {
+		font-size: 40px;
+	}
+
+	.shinka-post__share {
+		margin-top: 10px;
+		svg {
+			width: 30px;
+			height: 30px;
+			cursor: pointer;
+		}
 	}
 	
-	.shinka__in-post-title:first-of-type {
+	.shinka-post__sns-btn {
+		margin-left: 10px;
+	}
+
+	.shinka-post__content {
+		p, ul, ol {
+			font-size: 18px;
+		}
+	}
+
+	.shinka-post__main {
+		padding: 0;
+	}
+
+	.shinka__recommended-content {
+		display: flex;
+		flex-wrap: nowrap;
+		padding: 0;
+	}
+
+	.shinka__recommended-content-post {
 		margin-top: 0;
+	}
+}
+
+@media (min-width: 700px) {
+	.shinka__post-game-wrapper {
+		grid-template-columns: 1fr 4fr;
+		grid-template-rows: none;
+		grid-gap: 20px;
+	}
+	
+	.shinka__post-game-cover {
+		grid-row: 1 / 4;
+	}
+
+	.shinka__post-game-details {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: repeat(2, 1fr);
+		grid-gap: 10px;
+		grid-area: 2;
+	}
+
+	.shinka__post-game-text {
+		margin: 0;
 	}
 }
