--- a/style.css
+++ b/style.css
@@ -1217,11 +1217,14 @@ textarea {
 
 .shinka-post__title {
 	font-size: 30px;
+	line-height: 1.3em;
 }
 
 .shinka-post__excerpt {
-	font-size: 17px;
+	font-size: 20px;
 	margin-top: 8px;
+	line-height: 1.3em;
+	color: #6a6a6a;
 }
 
 .shinka-post__meta {
@@ -1420,7 +1423,6 @@ textarea {
 
 .shinka__recommended-content {
 	margin-top: 10px;
-	padding: 0 15px;
 }
 
 .shinka__recommended-content-post, .shinka-sidebar__popular-post-wrapper, .shinka-sidebar__popular-post {
@@ -1513,20 +1515,20 @@ textarea {
 		padding: 0;
 		margin-top: 20px;
 	}
-	.shinka-home__hot-news {
+	.shinka-home__hot-news, .shinka__recommended-content-post {
 		flex: 0 1 25%;
 		margin-right: 20px;
 	}
-	.shinka-home__hot-news:last-child {
+	.shinka-home__hot-news:last-child, .shinka__recommended-content-post:last-child {
 		margin-right: 0;
 	}
-	.shinka-home__hot-news:nth-child(3), .shinka-home__hot-news:nth-child(4) {
+	.shinka-home__hot-news:nth-child(3), .shinka-home__hot-news:nth-child(4), .shinka__recommended-content-post:nth-child(3), .shinka__recommended-content-post:nth-child(4) {
 		margin-top: 0;
 	}
-	.shinka-home__hot-news:nth-child(odd) {
+	.shinka-home__hot-news:nth-child(odd), .shinka__recommended-content-post:nth-child(odd) {
 		margin-right: 20px;
 	}
-	.shinka-home__hot-news-title {
+	.shinka-home__hot-news-title, .shinka__recommended-content-title {
 		font-size: 20px;
 		line-height: 1.5em;
 		margin-top: 8px;
@@ -1606,8 +1608,57 @@ textarea {
 		padding-left: 15px;
 		border-left: 1px solid #d8d8d8;
 	}
-	.shinka__in-post-title:first-of-type {
+	.shinka-sidebar .shinka__in-post-title:first-of-type {
 		margin-top: 0;
+	}
+	.shinka-post__title {
+		font-size: 40px;
+	}
+	.shinka-post__share {
+		margin-top: 10px;
+	}
+	.shinka-post__share svg {
+		width: 30px;
+		height: 30px;
+		cursor: pointer;
+	}
+	.shinka-post__sns-btn {
+		margin-left: 10px;
+	}
+	.shinka-post__content p, .shinka-post__content ul, .shinka-post__content ol {
+		font-size: 18px;
+	}
+	.shinka-post__main {
+		padding: 0;
+	}
+	.shinka__recommended-content {
+		display: flex;
+		flex-wrap: nowrap;
+		padding: 0;
+	}
+	.shinka__recommended-content-post {
+		margin-top: 0;
+	}
+}
+
+@media (min-width: 700px) {
+	.shinka__post-game-wrapper {
+		grid-template-columns: 1fr 4fr;
+		grid-template-rows: none;
+		grid-gap: 20px;
+	}
+	.shinka__post-game-cover {
+		grid-row: 1 / 4;
+	}
+	.shinka__post-game-details {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: repeat(2, 1fr);
+		grid-gap: 10px;
+		grid-area: 2;
+	}
+	.shinka__post-game-text {
+		margin: 0;
 	}
 }
 
